# vp-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
res/shaders/: ui_geometry.frag  ui_lighting.vert
src/: bindings.rs  blocks.rs  input_state.rs  lib.rs  objects.rs  pipeline_proc.rs  pipelines.rs  program.rs  render_state.rs  scene.rs  system.rs  vertex.rs  vpe.rs
src/bindings/: program.rs
src/bindings/program/: handler.rs
src/blocks/: camera.rs  camera2d.rs  camera3d.rs  model.rs  model_example.rs
src/objects/: buffers.rs  dynamic.rs  rendering.rs  static.rs  ui.rs  update.rs
src/objects/dynamic/: state.rs
src/objects/rendering/: sub.rs
src/objects/static/: state.rs
src/objects/ui/: rect.rs
src/pipeline_proc/: engine_pipeline.rs  pf.rs  pipeline_info.rs
src/pipeline_proc/pf/: pipeline_function.rs
src/pipelines/: simple.rs  ui.rs  ui_example.rs
src/program/: macros.rs
src/scene/: bucket.rs
src/system/: update_element.rs
src/vertex/: ui.rs
