[package]
name = "vpe"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpe"
path = "src/vpe.rs"
crate-type = ["lib"]

[toolchain]
channel = "nightly"

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 0
[profile.dev.package.vpb]
opt-level = 0

[dependencies]
vpb = { path="vp-base" }
glfw = { version = "0.52.0", features = ["vulkan"] }
ash = { version = "0.37.3+1.3.251", features = ["linked"] }
shaderc = "0.8.2"
memoffset = "0.8.0"
nalgebra = "0.31.4"
bytemuck = "1.13.1"
glm = "0.2.3"
bitflags = "2.3.2"